# Audio-Converter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Doc.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run.bat
.github/workflows/: ci.yml
src/convertidor_audio/: __init__.py  app.py  conversion.py  formats.py  workers.py
src/convertidor_audio/ui/: main_window.py  style.py
