[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-converter"
version = "1.0.0"
description = "Desktop application for batch audio conversion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
]

[project.scripts]
audio-converter = "convertidor_audio.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]